# key-value-storage

./: .gitignore  Cargo.toml  README.md  build.sh  debug.sh  default.nix
storage.dna.workdir/: dna.json  dna.yaml  key-value-storage.dna
tests/: package-lock.json  package.json
tests/src/: index.ts
zomes/storage/: Cargo.toml
zomes/storage/src/: entries.rs  error.rs  lib.rs  utils.rs
zomes/storage/src/entries/item/: handlers.rs  mod.rs
zomes/storage/src/entries/store/: handlers.rs  mod.rs
