[workspace]
members = [
  "zomes/storage",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

# [patch.crates-io]
# hdk3 = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "hdk3"}
# holo_hash = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "holo_hash"}
# hc_utils = {git = "https://github.com/holochain/hc-utils", rev = "c2e4afb6b7119ad936f3b8aec5538c1c9c4f7e1b", package = "hc_utils"}

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
